# MRZ-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.yml  main.py  requirements-gpu.txt  requirements.txt  run_mrz_pipeline.py  turbojpeg.py
MRZScanner/: README.md  setup.cfg
MRZScanner/mrzscanner/det/ckpt/: mrz_detection_20250222_fp32.onnx
MRZScanner/mrzscanner/spotting/ckpt/: mobilenetv4_conv_small_bifpn1_l6_d256_p12345_finetune_20240919_fp32.onnx
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: mrz.py
app/core/: __init__.py  config.py  logging.py  security.py
app/models/: __init__.py  detection.py  recognition.py
app/schemas/: request.py  response.py
app/services/: document.py  fallback.py  mrz_detection.py  mrz_pipeline.py  mrz_recognition.py  postprocessing.py  preprocessing.py  validation.py
app/utils/: __init__.py  exceptions.py  image.py  turbojpeg_compat.py
configs/: cards_rtdetrv2_r18.yml
deploy/: Caddyfile
models/: unet_resnet34.pth
tests/: test_fallback_helpers.py  test_mrz_parser.py  test_upload_security.py
tools/: benchmark_accuracy.py  test_real.py
