[metadata]
name = mrzscanner_docsaid
version = attr: mrzscanner.__version__
description = A Python package for recognizing and extracting MRZ from visa and passport documents.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.10,<=3.12
url = https://github.com/DocsaidLab/MRZScanner.git

[options]
packages = find:
include_package_data = True
setup_requires=
    pip
    setuptools
    wheel
install_requires =
    capybara_docsaid>=0.8.0,<1.0.0

[options.packages.find]
exclude =
    data
    docker
    demo
    docs
    model
    model.*
    tests
    benchmark
    reference
